[gd_scene load_steps=4 format=3 uid="uid://cs88qbww53pfs"]

[ext_resource type="Script" uid="uid://doavpgx4oonul" path="res://scripts/signal_manager.gd" id="1_rbo0b"]
[ext_resource type="Texture2D" uid="uid://dqpyid2x6hd2b" path="res://textures/antenna.png" id="2_60ih8"]

[sub_resource type="LabelSettings" id="LabelSettings_60ih8"]
font_color = Color(0.99999994, 0.1895321, 0.18396717, 1)

[node name="Signal Manager" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 597.9087
offset_top = 456.27374
offset_right = 1309.9087
offset_bottom = 840.27374
scale = Vector2(3, 3)
script = ExtResource("1_rbo0b")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 712.0
offset_bottom = 384.0
color = Color(0.15294118, 0.15294118, 0.15294118, 0.94509804)

[node name="Control" type="Control" parent="Background"]
layout_mode = 1
anchor_left = 0.060000002
anchor_top = 0.238
anchor_right = 0.298
anchor_bottom = 0.767
offset_left = 0.31044006
offset_top = -0.14990234
offset_right = -0.14556885
offset_bottom = 0.047424316
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background/Control"]
layout_mode = 1
offset_left = 20.333334
offset_top = -2.0
offset_right = 532.3333
offset_bottom = 510.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_60ih8")

[node name="Connection Status" type="Label" parent="Background/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.5
offset_top = -82.0
offset_right = 70.49999
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
text = "Connection Status"

[node name="LOST" type="Label" parent="Background/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.5
offset_top = -55.0
offset_right = 70.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "LOST"
label_settings = SubResource("LabelSettings_60ih8")
horizontal_alignment = 1

[node name="Navbar" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 712.0
offset_bottom = 24.0
color = Color(0.26293245, 0.26293245, 0.26293242, 0.94509804)

[node name="Label" type="Label" parent="Navbar"]
layout_mode = 0
offset_right = 327.0
offset_bottom = 24.0
text = " Signal Manager"
vertical_alignment = 1

[connection signal="gui_input" from="Navbar" to="." method="_on_navbar_gui_input"]
[connection signal="mouse_entered" from="Navbar" to="." method="_on_navbar_mouse_entered"]
[connection signal="mouse_exited" from="Navbar" to="." method="_on_navbar_mouse_exited"]
